--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@angular/common": "~8.2.14",
         "@angular/compiler": "~8.2.14",
         "@angular/core": "~8.2.14",
+        "@angular/fire": "^5.1.1",
         "@angular/forms": "~8.2.14",
         "@angular/material": "^8.2.3",
         "@angular/platform-browser": "~8.2.14",
@@ -31,19 +32,22 @@
         "bootstrap": "^4.3.1",
         "chart.js": "^2.9.3",
         "chartjs-plugin-annotation": "^0.5.7",
+        "firebase": "^5.7.3",
         "font-awesome": "^4.7.0",
         "hammerjs": "^2.0.8",
+        "json2csv": "^5.0.0",
         "material-design-icons": "^3.0.1",
         "moment": "^2.24.0",
         "ng-snotify": "^4.3.1",
         "ng-zorro-antd": "^8.5.2",
         "ng2-charts": "^2.3.0",
-        "ngx-checkbox": "^0.0.8",
         "ngx-bootstrap": "^5.2.0",
+        "ngx-checkbox": "^0.0.8",
         "ngx-icons": "^0.3.0",
         "ngx-loading": "^8.0.0",
         "ngx-socket-io": "^3.0.1",
         "rxjs": "~6.4.0",
+        "save-as": "^0.1.8",
         "tslib": "^1.10.0",
         "zone.js": "~0.9.1"
     },
